applications/lore-sentry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lore-sentry
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lore-sentry
  ports:
    - name: http
      port: 80
      targetPort: http
